<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0"
    android:padding="30dp">

    <TableRow
        android:padding="5dp">
        <TextView
            android:text="@string/lbl_weather_tittle"
            android:layout_width="match_parent"
            android:layout_span="4"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/lbl_day"
            android:layout_width="match_parent"
            />
        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@mipmap/clouded"
            />
        <TextView
            android:text="@string/lbl_min"/>
        <TextView
            android:text="@string/lbl_max"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="14/07"
            android:layout_width="match_parent"
            />
        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@mipmap/clouded"
            />
        <TextView
            android:text="@string/lbl_temperature_10"/>
        <TextView
            android:text="@string/lbl_temperature_15"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="15/07"
            android:layout_width="match_parent"
            />
        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@mipmap/snowing"
            />
        <TextView
            android:text="@string/lbl_temperature_20"/>
        <TextView
            android:text="@string/lbl_temperature_30"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="16/07"
            android:layout_width="match_parent"
            />
        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@mipmap/raining"
            />
        <TextView
            android:text="@string/lbl_temperature_15"/>
        <TextView
            android:text="@string/lbl_temperature_30"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="17/07"
            android:layout_width="match_parent"
            />
        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@mipmap/sun"
            />
        <TextView
            android:text="@string/lbl_temperature_10"/>
        <TextView
            android:text="@string/lbl_temperature_25"/>
    </TableRow>


</TableLayout>